update entity user