@@ -7,8 +7,10 @@ import fpt.capstone.edu360managementsystem.mapper.UserMapper;
 import fpt.capstone.edu360managementsystem.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -19,9 +21,10 @@ public class UserService {
     @Autowired
     private UserMapper userMapper;
 
+    @Transactional(readOnly = true)
     public List<UserResponse> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(userMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
